fixed footer space on mobile

--- a/src/app-ui/Footer/_Responsive.scss
+++ b/src/app-ui/Footer/_Responsive.scss
@@ -25,6 +25,9 @@
       }
     }
   }
+  .margin-top-10 {
+    margin-top: 10%;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -47,5 +50,8 @@
   }
   .footer-bottom {
     padding: 0px 20px 12px 20px;
+  }
+  .margin-top-10 {
+    margin-top: 10%;
   }
 }
